@@ -1,6 +1,9 @@
 			SWI-Prolog ChangeLog
 			====================
 
+  * FIXED: report x, ), y as syntax error rather then , ')', y.  Reported
+    by Tolga Konik.
+
   * ADDED: installation of dotfiles (Unix makefile)
 
   * ADDED: edit/1 to include definition for uedit32 (Tolga Konik)
